Fixing signup t&c scroll and alignment of phone extension

--- a/src/app/components/access/signup/signup.responsive.scss
+++ b/src/app/components/access/signup/signup.responsive.scss
@@ -23,6 +23,7 @@
 			    margin-top: 0;
 			    border: solid 1px #e7ecf1;
 			    background: white;
+			    padding: 5px;
 		    }
 	    }
 	    .error {
