--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -247,6 +247,7 @@ table {
     .extension {
         position: absolute;
         left: 20px;
+        top: 17px;
     }
     input {
         margin-top: 0px;
